--- a/input.css
+++ b/input.css
@@ -1,5 +1,23 @@
 @import "tailwindcss";
 
 body{
-    font-family: Nunito;
+    font-family: 'Nunito';
+}
+
+.animation-con{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height : 100%;
+    pointer-events: none;
+    overflow: hidden;
+}
+.card{
+    background-color: #202b3b;
+    border : 1px solid #2e3949;
+}
+.card:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 12px 24px #151e2b;
 }
